# warzonecivilisation

./: .gitignore  CMakeLists.txt  LICENCE  README.md  id_wisdom.txt
data/games/classic/: map.json  meta.json
data/games/classic/component/healthy/: troop.soldier.json
data/games/classic/entity/data/: base.json  troop.soldier.json
data/games/classic/materials/: material.json
lib/mtwister/: mtwister.cpp  mtwister.h
src/chococaker/: name_space.h
src/chococaker/defs/: inventory_def.h
src/chococaker/ecs/component/entity/: attacker_component.cpp  attacker_component.h  bought_component.cpp  bought_component.h  costlyperturn_component.cpp  costlyperturn_component.h  healable_component.cpp  healable_component.h  healthy_component.cpp  (+19 more)
src/chococaker/ecs/system/: health_system.cpp  health_system.h  move_system.cpp  move_system.h
src/chococaker/util/: event_error_util.h
src/wzc/: game.cpp  game.h  game_object.cpp  game_object.h  game_player.cpp  game_player.h  game_state.cpp  game_state.h  game_type_map.cpp  game_type_map.h  main.cpp  name_space.h  namespaced_key.h
src/wzc/ecs/: ecs_manager.cpp  ecs_manager.h
src/wzc/ecs/prefab/: object_prefab.cpp  object_prefab.h  player_prefab.cpp  player_prefab.h
src/wzc/ecs/system/: system.cpp  system.h
src/wzc/error/: component_not_found.cpp  component_not_found.h  id_type_mismatch.cpp  id_type_mismatch.h  null_encounter.cpp  null_encounter.h
src/wzc/handle/: object_handle.cpp  object_handle.h  player_handle.cpp  player_handle.h
src/wzc/math/: geometry.cpp  geometry.h  point2d.cpp  point2d.h  vector2.cpp  vector2.h
(+23 files in other folders)
